# OGRaySpY

./: .gitignore  .readthedocs.yaml  Including plotly package  README.md  README.rst  WindowsI56611.pkl  activity_calculation.ipynb  basic_net_areas.py  bd_pandas.py  cwt_calc_peaks.py  dash_core_comps_dcc.py  dash_plotly_1.py  dash_spectrum_viewer.py  dash_world_indicators.py  filebatch_class.py  generic_series_analysis_class.py  graphics_test.ipynb  hello.py  html_window_class.py  incremental_pca.ipynb  ipynb_files_list.txt  livechart_api.ipynb  lmfit_package.ipynb  lmfit_package_decayingwave.ipynb  lmfit_package_doubleexp.ipynb  lmfit_package_gaussianmulti.ipynb  lmfit_package_polylog.ipynb  mainwindow_class.py  nuclide_analysis_class.py  nuclide_identification.ipynb  nuclide_identification_step-1.ipynb  nuclide_identification_step-2.ipynb  ograspy.py  ograyspy.py  ograyspy_class.py  ograyspy_main.py  peaksparms_class.py  plotly_in_jupyterlab.ipynb  pyproject.toml  radionuc_analysis_testes_lmfit.ipynb  (+13 more)
Eflu_code/: 2019-analisando.ipynb  2019-bokeh-test1.ipynb  2019-calculos-CAC-bd.ipynb  2019-cwt-analysis-real.ipynb  2019-cwt-analysis-real_with_effic-curve-Pandas.ipynb  2019-files-list-CHN.ipynb  2019-gerar-pkl-CAC-2018.ipynb  2019-nov-warp2.ipynb  2019-sep-25 ALMERA Samples CSV.csv  2019_22_testes_np-arrays.ipynb  2019_Exemplo_Box-plot.ipynb  2019_Sample1A.IEC  2019_Sample1B.IEC  2019_Sample2.IEC  2019_Sample3.IEC  2019_TP_RF_results.csv  2019_TP_RF_results_ods.ods  2019_big-histogram.ipynb  2019_testes_np-arrays_local-Lin-Ipen.ipynb  2020_Mariana-PR_AgAm3-2911.ipynb  (+52 more)
(+305 files in other folders)
