[metadata]
name = OGRaySpY
version = 0.0.1
license = <license name, e.g. MIT>
description = <A short description>
long_description = file: README.rst
author = <Author name>
author_email = maduar@vivaldi.net
classifiers=
   <classifier 1>
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src
